@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 17;
+use Test::More tests => 19;
 
 use Test::XML;
 
@@ -36,9 +36,10 @@ my @tests = (qw(
     with-blockquote
     with-programlisting
     paras-with-entities-at-start-of-line
+    with-xml-lang-attribute
     ));
 
-# TEST:$num_texts=8
+# TEST:$num_texts=9
 
 my $grammar = XML::Grammar::Fiction::FromProto->new({
         parser_class => "XML::Grammar::Fiction::FromProto::Parser::QnD",
